# leitorDeUrl

./: enviarEmail.py  leirturaDeUrl.py  pyproject.toml
